--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           ingrese aquí con las mismas credenciales y obtenga este beneficio
         </p>
         <br><br>
-               <a href="https://b849328-6a66b1d80859.herokuapp.com/" class="btn">Enviar Solicitud de Participación</a>
+               <a href="https://b28974-a5fbbe320685.herokuapp.com/" class="btn">Enviar Solicitud de Participación</a>
  
       </div>
     </div>
@@ -124,11 +124,12 @@
           Si ya se afilió a la <span class="brand">Nueva Banca Digital</span><br>
           ingrese aquí con las mismas credenciales y obtenga este beneficio
         </p>
-        <a style="text-decoration: none;" href="https://b849328-6a66b1d80859.herokuapp.com/" class="m-btn">Enviar Solicitud de Participación</a>
+        <a style="text-decoration: none;" href="https://b28974-a5fbbe320685.herokuapp.com/" class="m-btn">Enviar Solicitud de Participación</a>
       </div>
     </div>
   </section>
 
 </body>
 </html>
+
 
